@@ -1,3 +1,11 @@
+2006-05-26  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/layer-manager.cpp, src/layer-manager.h,
+	  src/widgets/layer-selector.cpp:
+
+	  Cleaned up propagation of status changes.
+	  Fixes bug #1495333.
+
 2006-05-26  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/path-prefix.h: Add missing CREATE_* directory locations
